[tool.poetry]
name = "async-python-sprint-3"
version = "0.1.0"
description = ""
authors = ["Pavel Korsakov <PKorsakov@datafort.ru>"]
readme = "README.md"
packages = [{include = "async_python_sprint_3"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
isort = "^5.11.4"
pytest = "^7.2.0"
alembic = "^1.9.0"
sqlalchemy = "^1.4.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
