[tool.poetry]
name = "async-python-sprint-3"
version = "0.1.0"
description = ""
authors = ["Pavel Korsakov <PKorsakov@datafort.ru>"]
readme = "README.md"
#packages = [{include = "async_python_sprint_3"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
isort = "^5.11.4"
pytest = "^7.2.0"
alembic = "^1.9.0"
sqlalchemy = {extras = ["mypy"], version = "^1.4.45"}
pydantic = "^1.10.2"
asyncpg = "^0.27.0"
aiohttp = "^3.8.3"
pytest-asyncio = "^0.20.3"
redis = "^4.4.0"
mypy = "^0.991"
poetry-dotenv-plugin = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 99
multi_line_output = 0
skip = ['.git',
      '.mypy_cache',
      '.venv',
      'venv',
      'migrations', ]

[tool.mypy]
python_version = "3.10"
exclude = "tests/|venv/|env.py"
